--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
                         <H2>Agega tu correo para no darte preferencia! (:<</H2>
                                 <input type="email" id="email" name="email" placeholder="Ingresa tu correo electrónico">
-                                <button type="submit" class="btn force-center" id="btn">Recibir</button>
+                                <button type="submit" class="btn2 force-center" id="btn2">Recibir</button>
 
                     </div>
                 </form>
